--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>Project list</h1>
+        <h1>Node-todo-project</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
